--- a/src/app/Component/dashboard/dashboard.component.html
+++ b/src/app/Component/dashboard/dashboard.component.html
@@ -1,1 +1,40 @@
-<p>dashboard works!</p>
+<header class="row">
+    <div class="col-lg-6">
+        <img src="../../../assets/image/Loginicon.png" id="avater-img"/>
+    </div>
+    <div class="col-lg-6"><button id="logout" (click)="logout()">logout</button></div>
+</header>
+
+<section class="row">
+    <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let user of Users">
+        <div class="scene">
+            <div class="card">
+                <div class="card-face card-face--front">
+                    <img src="{{user.avatar}}" class="card-img">
+                </div>
+                <div class="card-face card-face--back">
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    name: 
+                                </td>
+                                <td>
+                                    {{user.first_name}} {{user.last_name}}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    email: 
+                                </td>
+                                <td>
+                                    <a href = "mailto:{{user.email}}" class="email">{{user.email}}</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
