--- a/src/app/Component/login/login.component.css
+++ b/src/app/Component/login/login.component.css
@@ -1,6 +1,16 @@
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
-
+#login {
+  background-image: url(../../../assets/image/login-background.jpg);
+    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    min-height: 100vh;
+    font-family: 'Montserrat', sans-serif;
+}
 .form-header {
   width: 130px;
   height: 130px;
@@ -37,7 +47,7 @@
   margin-bottom: 30px;
   padding: 2px 0px;
   padding-bottom: 5px;
-  width: 250px;
+  width: 25em;
   background-color: transparent;
   border: none;
   outline: none;
@@ -98,4 +108,20 @@
 ::placeholder {
   color: #fff;
   letter-spacing: 2px;
+}
+
+
+.invalid-feedback {
+  display: block;
+    color: #2700ff;
+    font-size: 18px;
+    font-weight: 800;
+    margin: 0px;
+}
+
+.alert {
+  background-color: #ff0303a8;
+  color: white;
+  font-size: 18px;
+  padding: 10px;
 }
