--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-image: url(../src/assets/image/login-background.jpg);
-    background-size: contain;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-    min-height: 100vh;
-    font-family: 'Montserrat', sans-serif;
-    
-  }
-  * {
-    box-sizing: border-box;
-  }
+  overflow-x: hidden;
+}
