--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -4,9 +4,9 @@
         <img src="../../../assets/image/Loginicon.png"/>
     </div>
     <h2 id="title">Login</h2>
-    <!-- <div class="alert" style="display: none;">
-      <h3>Username or password is incorrect</h3>
-    </div> -->
+    <div class="alert" style="display: none;">
+      <p>Email or password is incorrect</p>
+    </div>
     <form class="items" [formGroup]="Userform" (submit)="onSubmit(Userform.value, $event)">
       <div class="form-group">
         <input type="text" id="form-text" placeholder="email" formControlName="email"  />
