--- a/src/app/Component/dashboard/dashboard.component.html
+++ b/src/app/Component/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <header class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-xs-6 col-sm-6 ">
         <img src="../../../assets/image/Loginicon.png" id="avater-img"/>
     </div>
-    <div class="col-lg-6"><button id="logout" (click)="logout()">logout</button></div>
+    <div class="col-lg-6 col-xs-6 col-sm-6 "><button id="logout" (click)="logout()">logout</button></div>
 </header>
 <section class="row">
     <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let user of Users">
